# tav-crypto

./: .gitignore  CITATION.cff  COMMERCIAL_LICENSE  CONTRIBUTING.md  README.md  SECURITY.md  TAV_CBA_PROTOCOL.md
.github/: FUNDING.yml
Python/: tav_crypto.py
src/Python/: tav_cba_protocol.py  tav_crypto.py
src/arduino/: tav_arduino.h  tav_arduino_example.ino  tav_cba_iot.h  tav_cba_iot_example.c
src/c/: tav.c  tav.h  tav_cba.c  tav_cba.h  tav_cba_iot.h  tav_openssl_engine.c  tav_sign.c
src/js/: TavCBA.java  tav.js
src/rust/: Cargo.toml  lib.rs  tav_cba.rs  tav_cba_example.rs
tests/: test_runner.c  test_vectors.h  vectors_from_c.json  vectors_from_js.json
tests/interop/: interop_generate_c.c  interop_generate_js.js  interop_validate_c.c  interop_validate_js.js  run_interop_tests.sh
