[package]
name = "TAV Clock Cryptography v9.1"
version = "9.1.0"
Copyright = (C) 2025 Carlos Alberto Terencio de Bastos
License = AGPL-3.0 - https://github.com/caterencio/tav-crypto

[lib]
name = "tav_crypto"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dependencies]
# Para WASM bindings (opcional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Performance", "Window"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
